# fpl-motw

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  env.yaml  pyproject.toml  requirements.txt  winner.sh
backend/: app.py  conda.yaml  config.py  requirements.txt
backend/internal/: motw.py
backend/router/: api.py
fpl_motw/: __main__.py  api.py  cli.py  motw.py
frontend/: .env.production.example  next.config.js  package-lock.json  package.json
frontend/src/: theme.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/config/: index.ts
motw/: __main__.py  api.py  cli.py  motw.py
src/: funcs.py  main.py
