[project]
name = "fpl-motw"
version = "0.1.0"
description = "Fantasy Premier League Manager of the Week"
authors = [
    { name = "Hans Erling Eidsvold", email = "hans.erling@hotmail.com" },
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
fpl-motw = "fpl_motw.cli:app"

